# T4

./: .env  .env.skel  .gitignore  docker-compose.yml  ngrok.yml  package.json  readme.md
dev-utils/: harvest_seeds.ps1  plant_seeds.ps1  plant_seeds.sh  read_dotenv.ps1  read_dotenv.sh
dev_utils/: plant_seeds.ps1  plant_seeds.sh
hasura-data/: config.yaml
hasura-data/metadata/: actions.graphql  actions.yaml
hasura-data/seeds/default/: 1664854663126_UserSeed.sql  1664854663738_TournamentSeed.sql  1665286414778_UserSeed.sql  1665286415461_TournamentSeed.sql  1665286416141_ScoringRulesetSeed.sql
matchmaker/: .gitignore  README.md  pyproject.toml
matchmaker/docker_setup/: build.dockerfile  matchmaker  matchmaker.service  nginx_conf_fix.sh
matchmaker/src/matchmaker/: wsgi.py
matchmaker/src/matchmaker/application/: Matchmaker.py  MatchmakerTypes.py  NextRoundMatchesTypes.py  QueryContext.py  UpdateScores.py  __init__.py  matchmaker.py  routes.py
matchmaker/src/matchmaker/application/games/: armada.py  legion.py  xwing.py
www/: .env  package.json
www/public/: index.html  meta.json
www/src/: App.css  App.js  index.css  index.js
www/src/auth/: Auth0Provider.js  AuthenticationButton.jsx  Loading.jsx  LoginButton.jsx  LogoutButton.jsx  ProtectedRoute.js
www/src/components/: CacheBuster.js  Navbar.jsx  Toaster.jsx  TournamentList.jsx  TournamentSummary.jsx
www/src/data/: Models.js  T4GraphContext.js
www/src/pages/: About.jsx  Events.jsx  Features.jsx  Home.jsx  Layout.jsx  NoPage.jsx  Players.jsx  Profile.jsx  Search.jsx
www/src/util/: armada.js  (+3 more)
(+122 files in other folders)
